--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-    <style href="miEstilo.css"
+    <link rel="stylesheet" href="miEstilo.css">
 <body>
     <h1>Aquí iria el título de la página</h1>
     <p>Esto es un párrafo</p>
     <p>Esto es un segundo párrafo</p>
+
+    <p>Esto es un parrafo desde el proyecto clonado</p>
 </body>
 </html>
